--- a/gulp/scss/style.scss
+++ b/gulp/scss/style.scss
@@ -1,4 +1,6 @@
-h1 {
-  color: red;
-  font-size: 30px;
-}
+// Basics
+@import "basics/cssreset";
+@import "basics/basics";
+
+// Pages
+@import "pages/pages";
